# gid-seminars

./: .gitignore  ASM_Website_Research_Report.md  README.md  cdc_feeds_research.md  idsa-research-report.md  main.py  pyproject.toml  requirements.txt  run_aggregator.sh
.github/workflows/: gid-seminars-daily.yml  process-event-submission.yml  process-hide-event.yml
config/: labkey.toml  settings.toml  sources.toml
data/: conference_archives.toml  excluded_events.toml  manual_seminars.toml  seminars.db
docs/: _config.yml  gid_seminars.ics  index.html  seminars.json  submit.html
research/: nih-videocast-data-sources.md
src/: __init__.py
src/core/: __init__.py  database.py  exceptions.py  exclusion_filter.py  keyword_filter.py  models.py  utils.py
src/deploy/: __init__.py  webdav_uploader.py
src/generators/: __init__.py  html_generator.py  ics_generator.py  json_generator.py
src/sources/: __init__.py  base.py  bluesky_source.py  collector.py  conference_source.py  ical_source.py  manual_source.py  podcast_source.py  rss_source.py  scraper_source.py  who_source.py
