[project]
name = "gid-seminars"
version = "0.1.0"
description = "Aggregator for Global Infectious Disease seminars and webinars"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "rich>=13.7.0",
    "toml>=0.10.2",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "icalendar>=5.0.0",
    "feedparser>=6.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
